# granola-reader

./: granola_reader.py  pyproject.toml
